kub-vols/stories-api/infra/k8s/stories-api-dpy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stories-api-dpy

spec: 
  replicas: 1
  selector:
    matchLabels:
      api: story
      
  ## STORY POD 
  template:
    metadata:
      labels:
        api: story
    spec:
      containers:
        - name: marknjo/kub-test-story-api
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /app/stories
              name: story-api-data

          resources:
            limits:
              cpu: "500m"
              memory: "1G"

  ## VOLUMES DEFINITION
  volumes: 
    - name: story-api-data
      emptyDir: {}
