kub-vols/stories-api/infra/k8s/stories-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stories-ingress-nginx
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules: 
  - host: "stories.io"
    http: 
      paths: 
      - path: "/"
        pathType: Prefix
        backend:
          service: 
            name: stories-api-srv
            port: 
              number: 3000
  ingressClassName: nginx
